<resources>
    <string name="app_name">ingresApp</string>
    <string name="hinteditTextVacio" />string>
    <string name="hinteditTextIngreseIdentificacion">Ingrese identificacion</string>string>
    <string name="hintEmail">Correo Electrónico</string>
    <string name="hintPassword">Contraseña</string>
    <string name="identificationHint">Número de identificación</string>
    <string name="namesHint">Nombres</string>
    <string name="surnamesHint">Apellidos</string>
    <string name="phoneHint">Número de telefono</string>
    <string name="temperatureHint">Temperatura registrada °C</string>
    <string name="editTextUsuario" />string>
    <string name="editTextPassword" />string>
    <string name="botonLogin">Iniciar Sesión</string>string>
    <string name="botonCrearRegistro">CREAR REGISTRO</string>string>
    <string name="botonConsultarRegistro">CONSULTAR REGISTRO</string>string>
    <string name="textViewRestablecerContraseña">¿Has olvidado tu contraseña?</string>string>
    <string name="botonCrearCuentaNueva">Crear Cuenta</string>string>
    <string name="textView_O">Ó</string>string>
    <string name="name_App">ingresApp</string>string>
    <string name="textViewUsuario">User</string>string>
    <string name="textViewPassword">Password</string>string>
    <string name="textViewRegistrar">Registrar</string>string>
    <string name="textViewConsultar">Consultar registro</string>string>
    <string name="textViewEliminar">Eliminar registro</string>string>
    <string name="textViewActualizar">Actualizar registro</string>string>
    <string name="imageButtonRegistrar">Registrar</string>string>
    <string name="imageButtonActualizar">Actualizar</string>string>
    <string name="imageButtonConsultar">Consultar</string>string>
    <string name="imageButtonEliminar">Eliminar</string>string>
    <string name="textViewIdentificacion">Número de identificación</string>string>
    <string name="textViewNombres">Nombres</string>string>
    <string name="textViewApellidos">Apellidos</string>string>
    <string name="textViewTelefono">Teléfono</string>string>
    <string name="textViewTemperatura">Temperatura en °C</string>string>
    <string name="textViewRol">Rol</string>string>
    <string name="editTextRegistroIdentificacion" />string>
    <string name="editTextRegistroNombres" />string>
    <string name="editTextRegistroApellidos" />string>
    <string name="editTextRegistroTelefono" />string>
    <string name="editTextRegistroTemperatura" />string>
    <string name="editTextConsultaIdentificacion" />string>
    <string name="editTextConsultaNombres" />string>
    <string name="editTextConsultaApellidos" />string>
    <string name="editTextConsultaTelefono" />string>
    <string name="editTextConsultaTemperatura" />string>
    <string name="editTextActualizaIdentificacion" />string>
    <string name="editTextActualizaNombres" />string>
    <string name="editTextActualizaApellidos" />string>
    <string name="editTextActualizaTelefono" />string>
    <string name="editTextActualizaTemperatura" />string>
    <string name="editTextEliminaIdentificacion" />string>
    <string name="botonEliminar">Eliminar</string>string>
    <string name="botonRegistrar">Registrar</string>
    <string name="botonActualizar">Actualizar</string>
    <string name="botonConsultar">Consultar</string>
    <string name="progressBar" />
    <string name="imagen" />
    <string name="textView" />
    <![CDATA[string>]]>
</resources>