<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.miapp.ingresapp.ui.readperson.ReadViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d3e0ea"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.readperson.ReadActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/loginimage" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/border_row"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextConsultaIdentificacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/identificationHint"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:text="@string/editTextConsultaIdentificacion"
                        android:textColor="@color/Azul_Oscuro"
                        android:textColorHint="@color/Azul_Oscuro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextConsultaNombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/namesHint"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="@string/editTextConsultaNombres"
                        android:textColor="@color/Azul_Oscuro"
                        android:textColorHint="@color/Azul_Oscuro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextConsultaApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/surnamesHint"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:text="@string/editTextConsultaApellidos"
                        android:textColor="@color/Azul_Oscuro"
                        android:textColorHint="@color/Azul_Oscuro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextConsultaTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/phoneHint"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:text="@string/editTextConsultaTelefono"
                        android:textColor="@color/Azul_Oscuro"
                        android:textColorHint="@color/Azul_Oscuro"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextConsultaTemperatura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/temperatureHint"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:textColor="@color/Azul_Oscuro"
                        android:textColorHint="@color/Azul_Oscuro"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerConsultaRol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp" />

                    <Button
                        android:id="@+id/botonConsultar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_rounded"
                        android:backgroundTint="#144359"
                        android:onClick="@{ () -> viewModel.onButtonLoginClicked() }"
                        android:text="@string/botonConsultarRegistro"
                        android:textColor="#d3e0ea" />

                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp">

                        <ProgressBar
                            android:id="@+id/progressBarReadRegistrer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:visibility="@{viewModel.progressVisibility}"/>
                    </FrameLayout>


                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>