<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.miapp.ingresapp.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d3e0ea"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/loginimage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/border_icon"
                        android:contentDescription="@string/imagen"
                        app:srcCompat="@drawable/logo_app"
                        app:tint="@color/Azul_Claro" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_rounded"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingTop="2dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="2dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_App"
                            android:textAlignment="center"
                            android:textColor="@color/Azul_Claro"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <EditText
                    android:id="@+id/editTextUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_top"
                    android:ems="10"
                    android:hint="@string/hintEmail"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/Azul_Oscuro"
                    android:textColorHint="@color/Azul_Oscuro"
                    android:text="@={viewModel.userEmail}"/>

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_bottom"
                    android:ems="10"
                    android:hint="@string/hintPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/Azul_Oscuro"
                    android:textColorHint="@color/Azul_Oscuro"
                    android:text="@={viewModel.userPass}"/>

                <Button
                    android:id="@+id/botonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_rounded"
                    android:nextFocusRight="@id/botonLogin"
                    android:padding="15dp"
                    android:text="@string/botonLogin"
                    android:textColor="@color/Azul_Claro"
                    android:onClick="@{ () -> viewModel.onButtonLoginClicked() }"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/textViewRestablecerContraseña"
                    android:textAlignment="center"
                    android:textColor="@color/Azul_Oscuro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="15dp">

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|top">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:visibility="@{viewModel.progressVisibility}" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:background="@color/Azul_Oscuro"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/Azul_Claro"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/textView_O"
                            android:textColor="@color/Azul_Oscuro" />

                    </FrameLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/botonRegistrerUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_rounded_stroke"
                    android:nextFocusRight="@id/botonLogin"
                    android:padding="15dp"
                    android:text="@string/botonCrearCuentaNueva"
                    android:textColor="@color/Azul_Oscuro" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>